# RG_TargetShooting

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Camera.hpp  Error.hpp  Shader.hpp  stb_image.h
resources/shaders/: fragmentShader.fs  vertexShader.vs
